fix auto zoom on mobile

--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -10,7 +10,7 @@
   section {
     width: 100%;
     max-width: 350px;
-    margin-right: 30px;
+    margin: 0 50px;
 
     form {
       /* margin-top: 100px; */
